# dspatcher

./: .cirrus.yml  .gitignore  .gitmodules  .travis.yml  CHANGES  CMakeLists.txt  LICENSE  README.md  README.md.autosave  meson.build  snapcraft.yaml
DSPatcher/: CMakeLists.txt
DSPatcher/include/: DsprController.h
DSPatcher/src/: DsprController.cpp  main.cpp
QtPatcher/: CMakeLists.txt
QtPatcher/include/: QtpComp.h  QtpDiag.h  QtpMain.h  QtpPin.h  QtpWire.h
QtPatcher/src/: QtpComp.cpp  QtpDiag.cpp  QtpMain.cpp  QtpPin.cpp  QtpWire.cpp
UiComponents/: CMakeLists.txt  UiComponent.cpp  UiComponent.h
UiComponents/FloatSlider/: CMakeLists.txt  FloatSlider.cpp  FloatSlider.h
UiComponents/TextInput/: CMakeLists.txt  TextInput.cpp  TextInput.h
UiComponents/UiGain/: CMakeLists.txt  UiGain.cpp  UiGain.h
UiComponents/include/: UiComponent.h
UiComponents/src/: UiComponent.cpp
dspatcher/: CMakeLists.txt  update_install_names.sh
dspatcher/dspatchables/: libDspAdder.dylib  libDspAudioDevice.dylib  libDspGain.dylib  libDspOscillator.dylib  libDspWaveStreamer.dylib
dspatcher/include/: Controller.h  DsprController.h  DsprParam.h
dspatcher/link/: DSPatch.lib  libDSPatch.dylib
dspatcher/link/Debug/: libDSPatch.dylib
dspatcher/link/Release/: libDSPatch.dylib
dspatcher/src/: Controller.cpp  DsprController.cpp  DsprParam.cpp  main.cpp
include/: DiagComp.h  DiagMain.h  DiagPin.h  DiagScene.h  DiagWire.h
qtpatcher/: CMakeLists.txt
qtpatcher/data/: QtpRes.qrc
qtpatcher/include/: QtpComp.h  QtpDiag.h  QtpMain.h  QtpPin.h  QtpScene.h  QtpWire.h
qtpatcher/src/: QtpComp.cpp  QtpDiag.cpp  QtpMain.cpp  QtpPin.cpp  QtpScene.cpp  QtpWire.cpp
scripts/: clang-format.bat  clang-format.sh
snap/: snapcraft.yaml
src/: DiagComp.cpp  DiagMain.cpp  DiagPin.cpp  DiagScene.cpp  DiagWire.cpp  main.cpp
